# dnn_opt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  doc-generator.sh  pandadoc.sh
.github/workflows/: build_copt.yml  build_core.yml  ccpp_ci.yml  code_lint.yml
docs/: api.md  code_standards.md  development_guidelines.md  index.md  quick_start_guide.md
docs/class_diagram/: dnn_opt.vpp
docs/regression_problems/: ccpp.csv  ccpp_normalized.csv  concrete-data.csv  concrete.csv  concrete_normalized.csv  wine_quality_white.csv  wine_quality_white_normalized.csv  winequality-white.csv
docs/regression_problems/bikes/: test.csv  train.csv  validation.csv
docs/regression_problems/parking/: test.csv  train.csv  validation.csv
docs/regression_problems/pullution/: test.csv  validation.csv
examples/: aao.cpp  benchmark.cpp  common.h  hpo.cpp  neural.cpp  opwa.cpp
examples/benchmark/: CMakeLists.txt  benchmark.cpp  fitness_time.cpp
examples/common/: common.h
examples/hpo/: CMakeLists.txt  hpo.cpp
examples/mot/: CMakeLists.txt  mot.cpp
examples/neural/: CMakeLists.txt  neural.cpp
examples/neural-cont/: CMakeLists.txt  neural-cont.cpp
examples/opwa-benchmark/: CMakeLists.txt  opwa-benchmark.cpp
examples/opwa-neural/: CMakeLists.txt  opwa-neural.cpp
notebooks/meta-compare/: meta-compare.html  meta-compare.ipynb
src/: dnn_opt.h
src/copt/activations/: elu.cpp  elu.h  hard_limit.cpp  hard_limit.h  identity.cpp  identity.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  tan_h.cpp  tan_h.h
src/copt/algorithms/: continuation.cpp  continuation.h  cuckoo.cpp  cuckoo.h  early_stop.cpp  early_stop.h  firefly.cpp  firefly.h  opwa.cpp  opwa.h  pso.cpp  pso.h
src/copt/base/: activation.cpp  activation.h  algorithm.cpp  algorithm.h  error.cpp  error.h  generator.cpp  generator.h  layer.cpp  layer.h  proxy_sampler.cpp  proxy_sampler.h  reader.cpp  reader.h  sampler.cpp  sampler.h  set.h  shufler.cpp  shufler.h  solution.cpp  solution.h  solution_set.h
src/copt/errors/: mse.cpp  mse.h  overall.cpp  overall.h
src/copt/generators/: constant.cpp  constant.h  normal.cpp  normal.h  uniform.cpp  uniform.h
src/copt/layers/: fc.cpp  fc.h
src/copt/readers/: csv_reader.cpp  csv_reader.h  file_reader.cpp  file_reader.h
src/copt/solutions/: ackley.cpp  ackley.h  alpine.cpp  alpine.h  de_jung.cpp  de_jung.h  griewangk.cpp  griewangk.h  hyper.cpp  hyper.h  network.cpp  network.h  rastrigin.cpp  rastrigin.h  rosenbrock.cpp  rosenbrock.h  schwefel.cpp  schwefel.h  step.cpp  step.h  styblinski_tang.cpp  styblinski_tang.h  wrapper.h
src/copt/solutions/bench/: ackley.cpp  ackley.h  alpine.cpp  alpine.h  brown_function.cpp  brown_function.h  chung_reynolds.cpp  chung_reynolds.h  cosine_mixture.cpp  csendes.cpp  (+28 more)
src/copt/statics/: cv.cpp  cv.h
src/core/: activation_function.h  algorithm.h  error_function.h  layer.h  parameter_generator.h  reader.h  sampler.h  solution.h  solution_set.h
src/core/activations/: elu.cpp  elu.h  hard_limit.cpp  hard_limit.h  identity.cpp  identity.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  tan_h.cpp  tan_h.h
src/core/algorithms/: continuation.cpp  continuation.h  cuckoo.cpp  cuckoo.h  early_stop.cpp  early_stop.h  firefly.cpp  firefly.h  gwo.cpp  gwo.h  mot.cpp  mot.h  opwa.cpp  opwa.h  pso.cpp  pso.h
src/core/base/: activation.cpp  activation.h  algorithm.cpp  algorithm.h  error.cpp  error.h  generator.cpp  generator.h  layer.cpp  layer.h  proxy_sampler.cpp  proxy_sampler.h  reader.cpp  reader.h  sampler.cpp  sampler.h  set.h  shufler.cpp  shufler.h  solution.cpp  solution.h  solution_set.h
src/core/errors/: mse.cpp  mse.h  overall.cpp  overall.h
src/core/generators/: constant.cpp  constant.h  group.cpp  group.h  normal.cpp  normal.h  uniform.cpp  uniform.h
src/core/layers/: fc.cpp  fc.h
src/core/readers/: csv_reader.cpp  csv_reader.h  file_reader.cpp  file_reader.h
src/core/solutions/: ackley.cpp  ackley.h  alpine.cpp  alpine.h  brown_function.cpp  brown_function.h  chung_reynolds.cpp  chung_reynolds.h  chung_reynolds_function.cpp  chung_reynolds_function.h  cosine_mixture.cpp  cosine_mixture.h  csendes.cpp  csendes.h  de_jung.cpp  de_jung.h  deb1.cpp  deb1.h  deb3.cpp  deb3.h  dixonp.cpp  dixonp.h  eggh.cpp  eggh.h  expo.cpp  expo.h  giunta.cpp  giunta.h  griewangk.cpp  griewangk.h  hyper.cpp  hyper.h  michalewicz.cpp  michalewicz.h  network.cpp  network.h  rastrigin.cpp  rastrigin.h  rosenbrock.cpp  rosenbrock.h  (+7 more)
src/core/statics/: cv.cpp  cv.h  k_fold.cpp  k_fold.h  tt.cpp  tt.h
src/cuda/activations/: elu.cu  elu.h  hard_limit.cu  hard_limit.h  identity.cu  identity.h  relu.cu  relu.h  sigmoid.cu  sigmoid.h  tan_h.cu  tan_h.h
src/cuda/algorithms/: continuation.cu  continuation.h  cuckoo.cu  cuckoo.h  firefly.cpp  firefly.cu  firefly.h  opwa.h  pso.cu  pso.h
src/cuda/base/: activation.h  algorithm.cu  algorithm.h  error.h  generator.h  layer.cu  layer.h  proxy_sampler.cu  proxy_sampler.h  reader.h  sampler.cu  sampler.h  set.h  solution.cu  solution.h  solution_set.h
src/cuda/errors/: mse.cu  mse.h
src/cuda/generators/: constant.cu  constant.h  normal.cu  normal.h  uniform.cu  uniform.h
src/cuda/layers/: fc.cu  fc.h
src/cuda/readers/: csv_reader.cu  csv_reader.h  file_reader.cu  file_reader.h
src/cuda/solutions/: ackley.cu  ackley.h  alpine.cu  alpine.h  de_jung.cu  de_jung.h  griewangk.cu  griewangk.h  hyper.cu  hyper.h  network.cu  network.h  rastrigin.cu  rastrigin.h  rosenbrock.cu  rosenbrock.h  schwefel.cu  schwefel.h  step.cu  step.h  styblinski_tang.cu  styblinski_tang.h  wrapper.h
src/io/: file_reader.h
src/metaheuristic/: cuckoo.h  firefly.h  gray_wolf.h  pso.h
src/model/activation_function/: elu.h  identity.h  relu.h  sigmoid.h  softmax.h  tan_h.h
src/model/error_function/: mse.h  overall_error.h
src/model/layer/: average_pooling.h  convolutional.h  discretization.h  fully_connected.h  max_pooling.h
src/model/parameter_generator/: normal.h  uniform.h
src/solution/: ackley.h  de_jung.h  griewangk.h  michalewicz.h  network.h  rastrigin.h  rosenbrock.h  schwefel.h  styblinski_tang.h
(+38 files in other folders)
