CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (DNN_OPT)

########################################### CORE SETTINGS ############################################ 

INCLUDE (CheckIncludeFile)
INCLUDE (CheckIncludeFileCXX)
INCLUDE (CheckIncludeFiles)
INCLUDE (ExternalProject)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

FILE(GLOB_RECURSE INC_ALL "src/*.h")

ADD_CUSTOM_TARGET(headers SOURCES ${INC_ALL})

ADD_EXECUTABLE(DNN_OPT main.cpp)
SET_TARGET_PROPERTIES(DNN_OPT PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)

############################################ MPI SETTINGS ############################################

#FIND_PACKAGE(MPI REQUIRED)

#SET(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
#SET(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})

#INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

#TARGET_LINK_LIBRARIES(DNN_OPT ${MPI_LIBRARIES})
