ADD_EXECUTABLE(benchmark benchmark.cpp)
TARGET_INCLUDE_DIRECTORIES(benchmark PRIVATE ../common)

IF(ENABLE_CORE)
    TARGET_LINK_LIBRARIES(benchmark dnn_opt_core)
ENDIF(ENABLE_CORE)

IF(ENABLE_COPT)
    TARGET_LINK_LIBRARIES(benchmark dnn_opt_copt)
ENDIF(ENABLE_COPT)

IF(ENABLE_CUDA)
  TARGET_LINK_LIBRARIES(benchmark dnn_opt_cuda)
ENDIF(ENABLE_CUDA)

SET_TARGET_PROPERTIES(benchmark PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(benchmark PROPERTIES LINKER_LANGUAGE CXX)

