ADD_EXECUTABLE(benchmark benchmark.cpp)
ADD_EXECUTABLE(fitness_time fitness_time.cpp)

TARGET_INCLUDE_DIRECTORIES(benchmark PRIVATE ../common)
TARGET_INCLUDE_DIRECTORIES(fitness_time PRIVATE ../common)

IF(ENABLE_CORE)
    TARGET_LINK_LIBRARIES(benchmark dnn_opt_core)
    TARGET_LINK_LIBRARIES(fitness_time dnn_opt_core)
ENDIF(ENABLE_CORE)

IF(ENABLE_COPT)
    TARGET_LINK_LIBRARIES(benchmark dnn_opt_copt)
    TARGET_LINK_LIBRARIES(fitness_time dnn_opt_copt)
ENDIF(ENABLE_COPT)

IF(ENABLE_CUDA)
  TARGET_LINK_LIBRARIES(benchmark dnn_opt_cuda)
  TARGET_LINK_LIBRARIES(fitness_time dnn_opt_cuda)
ENDIF(ENABLE_CUDA)

SET_TARGET_PROPERTIES(benchmark PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(benchmark PROPERTIES LINKER_LANGUAGE CXX)

SET_TARGET_PROPERTIES(fitness_time PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(fitness_time PROPERTIES LINKER_LANGUAGE CXX)


