ADD_EXECUTABLE(neural-cont neural-cont.cpp)
TARGET_INCLUDE_DIRECTORIES(neural-cont PRIVATE ../common)

IF(ENABLE_CORE)
    TARGET_LINK_LIBRARIES(neural-cont dnn_opt_core)
ENDIF(ENABLE_CORE)

IF(ENABLE_COPT)
    TARGET_LINK_LIBRARIES(neural-cont dnn_opt_copt)
ENDIF(ENABLE_COPT)

IF(ENABLE_CUDA)
  TARGET_LINK_LIBRARIES(neural-cont dnn_opt_cuda)
ENDIF(ENABLE_CUDA)

SET_TARGET_PROPERTIES(neural-cont PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(neural-cont PROPERTIES LINKER_LANGUAGE CXX)

