ADD_EXECUTABLE(neural neural.cpp)
TARGET_INCLUDE_DIRECTORIES(neural PRIVATE ../common)

IF(ENABLE_CORE)
    TARGET_LINK_LIBRARIES(neural dnn_opt_core)
ENDIF(ENABLE_CORE)

IF(ENABLE_COPT)
    TARGET_LINK_LIBRARIES(neural dnn_opt_copt)
ENDIF(ENABLE_COPT)

IF(ENABLE_CUDA)
  TARGET_LINK_LIBRARIES(neural dnn_opt_cuda)
ENDIF(ENABLE_CUDA)

SET_TARGET_PROPERTIES(neural PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(neural PROPERTIES LINKER_LANGUAGE CXX)

